# youtube-rust

lecture-1/: Cargo.toml
lecture-1/src/: main.rs
lecture-11/: Cargo.toml
lecture-11/src/: main.rs
lecture-12/: Cargo.toml  README.md  poem.txt
lecture-12/src/: lib.rs  main.rs
lecture-12/workspace_1/: Cargo.toml
lecture-12/workspace_2/: Cargo.toml
lecture-13/: Cargo.toml
lecture-13/src/: main.rs
lecture-14/: Cargo.toml
lecture-14/src/: main.rs
lecture-15/: Cargo.toml
lecture-15/src/: main.rs
lecture-2/: Cargo.toml
lecture-2/src/: main.rs
lecture-3/: Cargo.toml
lecture-3/src/: main.rs
lecture-4/: Cargo.toml
lecture-4/src/: main.rs
lecture-5/: Cargo.toml
lecture-5/src/: lib.rs  main.rs
lecture-5/src/model/: model.rs
lecture-6/: Cargo.toml
lecture-6/src/: main.rs
lecture-7/: Cargo.toml  abc.js  hello.txt
lecture-7/src/: main.rs
lecture-8/: Cargo.toml
lecture-8/src/: main.rs
lecture-9/: Cargo.toml
lecture-9/src/: lib.rs  main.rs
lecture-9/src/tests/common/: mathematical_tests.rs  mod.rs
rust-cli/: Cargo.toml
rust-cli/src/: lib.rs  main.rs
todo-app/src/: main.rs
